<resources>
    <string name="app_name">智能仓储</string>
    <string name="home_select_information">数据</string>
    <string name="home_select_function">功能</string>
    <string name="home_select_details">个人详情</string>
    <string name="httpOnErrorHint">连接不到不服务器，请检查网络</string>
    <string name="title_information">数据</string>
    <string name="title_function">全部功能</string>
    <string name="title_details">个人详情</string>
    <string name="title_palletDetails">托盘详情</string>
    <string name="login_btn">登录</string>
    <string name="dialog_login_loading">登录中......</string>
    <string name="user_name">姓名:</string>
    <string name="user_id">工号:</string>
    <string name="user_cancel">注销</string>
    <string name="user_depot">仓库:</string>
    <string name="depot_title_name">名称</string>
    <string name="depot_title_code">仓库编码</string>
    <string name="hint_depot_edit_content">请输入仓库名称或编号</string>
    <string name="palletDetails">托盘详情</string>
    <string name="functionPalletType">托盘管理</string>
    <string name="palletSubmit">提交</string>
    <string name="functionRackUp">上架</string>
    <string name="functionTakeDelivery">收货</string>
    <string name="functionPalletManger">托盘管理</string>
    <string name="function_palletManger_haveCode_in">有号入托</string>
    <string name="function_palletManger_noCode_in">无号入托</string>
    <string name="function_palletManger_out">拆托</string>
    <string name="functionQualityChecking">质检</string>
    <string name="functionDepotOut">下架</string>
    <string-array name="palletChoose">
        <item>有托盘号组托</item>
        <item>无托盘号组托</item>
        <item>拆托</item>
    </string-array>
    <string name="palletHaveCode">有托盘号组托</string>
    <string name="palletNoCode">无托盘号组托</string>
    <string name="palletOut">拆托</string>
    <string name="palletCancel">取消</string>
    <string name="rackUpAutoScanProduct">自动:请扫描货品</string>
    <string name="rackUpAutoScanSeat">自动:请扫描货架</string>
    <string name="rackUpAutoScanProductTo">自动:在次扫描货品提交上次货架</string>
    <string name="rackUpHandScanProduct">手动:请扫描货品</string>
    <string name="rackUpHandScanSeat">手动:请扫描货架</string>
    <string name="name">名称</string>
    <string name="takeDeliveryDetailsStandard">规格</string>
    <string name="takeDeliveryDetailsAmount">数量</string>
    <string name="takeDeliveryDetailsUnit">单位</string>
    <string name="takeDeliveryManifest">任务单号</string>
    <string name="packTitle">装箱</string>
    <string name="packManifest">装箱货单</string>
    <string name="packItemName">名称</string>
    <string name="packItemAmount">数量</string>
    <string name="packItemStandard">规格</string>
    <string name="unit">单位</string>
    <string name="packSelectTitle">装箱计划</string>
    <string name="packOperateCode">装箱编号</string>
    <string name="packOperateLevelCode">外装箱编号(F10编辑箱号)</string>
    <string name="packOperateUnitStand">箱规格</string>
    <string name="packOperateAddTitle">录入信息</string>
    <string name="packOperateAddAmount">已添加数量:</string>
    <string name="packOperateAddUnit">单位</string>
    <string name="packOperateTitle">装箱操作</string>
    <string name="depotOutRackList">下架货位列表</string>
    <string name="depotOutProductList">下架货品清单</string>
    <string name="depotOutProductDetailsTvTitle">当前货品详情</string>
    <string name="functionTakeBox">装箱</string>
    <string name="recommendRackNo">推荐货架</string>
    <string name="decode">解码中</string>
    <string name="functionGoodsAdjust">货位调整</string>
    <string name="httpQueryFailed">未查询到信息</string>
    <string name="hintSelectDepot">未选择仓库，不能查看详情</string>
    <string name="hintStartQuery">正在查询</string>
    <string name="hintQuerySuccess">查询成功</string>
    <string name="freshSuccessHint">加载成功</string>
    <string name="refreshErrorHint">已经加载全部</string>
    <string name="pleaseSelectDepot">未选择仓库，请选择仓库</string>
    <string name="noValue">当前没有信息</string>
    <string name="submitSuccessHint">提交成功</string>
    <string name="queryOtherTypeHint">查询类型不相符</string>
    <string name="serial">序列号</string>
    <string name="addMaxQuantityHint">已经添加到最大数量，无法继续添加</string>
    <string name="notAddSerialQuantityHint">添加序列号数量不足，请添加序列号</string>
    <string name="NotAddLpnNoHint">没有添加所要包装的箱号</string>
    <string name="startSubmitHint">正在提交</string>
    <string name="systemErrorHint">出现错误，请重新操作或联系管理员</string>
    <string name="otherProductHint">抱歉扫描的不是指定商品</string>
    <string name="takeBoxHint">请扫描任务单号</string>
    <string name="repeatHint">不允许重复录入</string>
    <string name="addSuccessHint">添加成功</string>
    <string name="pleaseAddBoxHInt">请添加当前外包装箱号</string>
    <string name="notFindProductHint">没有找到该商品</string>
    <string name="submitQtyNotZeroHint">提交数量不能小于零</string>
    <string name="notFindManifest">没有找到该任务单或任务单无内容</string>
    <string name="noRefresh">已经全部显示</string>
    <string name="depotNotHaveManifest">当前仓库无任务单</string>
    <string name="loadingSuccessHint">加载成功</string>
    <string name="loadingQuantityHint">加载数量</string>
    <string name="nowNotGoodsOfManifest">当前货单无货品</string>
    <string name="getDataError">获得数据失败，请重新操作</string>
    <string name="pleaseAddGoods">请添加货品</string>
    <string name="appUpdate">软件更新</string>
    <string name="startLoading">正在加载</string>
    <string name="socketTimeOutHint">连接超时，请重新操作</string>
    <string name="scanRackSuccess">扫描货位成功</string>
    <string name="rackNotNull">货架不能为空</string>
    <string name="pleaseRackUpQty">请填写上架数量</string>
    <string name="rackUpQtyError">上架数量不能大于可上架数量</string>
    <string name="pleaseEditRack">请扫描目标货位</string>
    <string name="functionCheck">盘点</string>
    <string name="title_activity_goods_add_details_aty">GoodsAddDetailsAty</string>
    <string name="targetRackNo">目标货架</string>
    <string name="submitQty">提交数量</string>
    <string name="decodeSuccess">解码成功</string>
    <string name="batchNo">批次号</string>
    <string name="goodsDoNotMeetInManifest">货品不符合任务清单要求</string>
    <string name="goodsDifference">货品不相同</string>
    <string name="batchNoDifference">批次号不同</string>
    <string name="pleaseScanningRackNo">请扫描货位</string>
    <string name="pleaseScanningGoods">请扫描货品</string>
    <string name="skuDifference">sku不匹配</string>
    <string name="boxName">箱子</string>
    <string name="submitManifesting">提交到任务单中</string>
    <string name="checkStatusToRack">盘点类型为按货位盘点</string>
    <string name="pleaseAddRackNo">请添加货位</string>
    <string name="goodsClassDifference">货品大类不匹配</string>
    <string name="checkStatusToGoodsClass">盘点类型为货品大类</string>
    <string name="ownerDifference">货主不匹配</string>
    <string name="checkStatusToOwner">盘点类型为货主</string>
    <string name="notFindAreaOfDepot">仓库无分拣区域</string>
    <string name="exceedQtyInPallet">超出托盘中数量</string>
    <string name="NotTheSameLocationAdjustment">不能相同货位调整</string>
    <string name="PleaseTransferToTheScanningLocationEncoding">请扫描转移到的货位编码</string>
    <string name="ChooseWayWithDefective">请选择不良品处理方式</string>
    <string name="GoodsInBoxDifferenceOfManifest">箱子内货品不符合当前任务单中的货品的要求</string>
    <string name="PleaseScanningToRackDownNo">请扫描下架到的货位编码</string>
    <string name="notFindGoodsOnManifest">在任务单中没有找到该货品</string>
    <string name="PleaseAddOutermostBox">请添加最外层装箱编号</string>
    <string name="SettingBoxSuccess">设置包装箱号成功</string>
    <string name="QtyOutNotCanAdd">数量超出限制不可添加</string>
    <string name="ChangeQtySuccess">数量修改成功</string>
    <string name="ChangeQtyError">修改数量不能低于箱之前已经包装数量</string>
    <string name="finding">查询中</string>
    <string name="nowNotHaveGoodsOfBox">当前箱子无货品</string>
    <string name="startSubmitBox">提交箱子</string>
    <string name="pleaseAddTargetRackNo">请添加目标货位</string>
    <string name="rackUpTitle">上架</string>
    <string name="pleaseScanningManifest">请扫描任务单</string>
    <string name="pleaseScanningGoodsOrLpn">请扫描货品或箱号</string>
    <string name="takeBoxingAddQty">撞向中添加数量</string>
    <string name="loadingData">正在加载数据</string>
    <string name="manifestList">任务单列表</string>
    <string name="goodsOperate">货品操作</string>
    <string name="goodsListOfManfiest">任务单中货品列表</string>
    <string name="depotOutAreaTitle">出库分拣区列表</string>
    <string name="pleaseScanningSortingArea">请扫描分拣区编码</string>
    <string name="pleaseScanningArea">请扫描区域编码</string>
    <string name="DepotOutManifestListTitle">出库任务单列表</string>
    <string name="rackDownQty">下架数量</string>
    <string name="depotOutOperateTitle">出库操作</string>
    <string name="depotOutGoodsListTitle">出库货品列表</string>
    <string name="packingToDepotOutAddBoxNo">包装出库添加出库箱号</string>
    <string name="scanningError">解码出错</string>
    <string name="notFindLpnOnManifest">当前任务单中不存在该箱子</string>
    <string name="boxNotRepeat">不能重复添加箱子</string>
    <string name="clearSuccess">清空成功</string>
    <string name="qtyLittleNotCanSubmit">数量不足,不能提交</string>
    <string name="takeBoxIng">装箱中</string>
    <string name="noPacking">未装箱</string>
    <string name="packingToDepotOutTitle">包装出库</string>
    <string name="refreshSuccess">更新成功</string>
    <string name="packingBoxOperate">包装箱子内容操作</string>
    <string name="areYouExitOperate">确定退出操作吗？</string>
    <string name="areYouPackingOver">装箱完成？</string>
    <string name="areYouSubmit">确定要提交？</string>
    <string name="areYouDeletBox">确定要删除箱号</string>
    <string name="deleteSuccess">删除成功</string>
    <string name="findSuccess">查询成功</string>
    <string name="AddingBoxNumbersIsIncorrect">添加箱子编号不正确</string>
    <string name="TheBoxAlreadyExists">箱子已经存在</string>
    <string name="packingTaskTitle">包装任务</string>
    <string name="MatchSuccessfully">匹配成功</string>
    <string name="rackDownOperateTitle">下架操作</string>
    <string name="pleaseScanningMoveToRackNo">请扫描下架移动到的货位</string>
    <string name="rack">货位</string>
    <string name="goodsToRackDown">货品下架</string>
    <string name="NeedRackDownQty">待下架数量</string>
    <string name="sortingOperateTitle">分拣操作</string>
    <string name="refreshing">刷新数据中</string>
    <string name="Matching">正在匹配</string>
    <string name="qtyLittle">数量不足</string>
    <string name="sortingQtyLittle">分拣区数量不足</string>
    <string name="sortingTaskTitle">分拣任务</string>
    <string name="checkManifestListTitle">盘点任务单列表</string>
    <string name="checkOperateTitle">盘点操作</string>
    <string name="pleaseScanningRackNoOrGoods">扫描货位或货品</string>
    <string name="areYouCancelOperate">是否取消操作？</string>
    <string name="checkGoodsListTitle">盘点货品清单</string>
    <string name="goodsAdjustTitle">货位调整</string>
    <string name="GoodsAdjustOperateOnRackTitle">货位货品调整</string>
    <string name="pleaseScanningTargetRackNo">请扫描目标货位</string>
    <string name="BoxOperateOnGoodsAdjustTitle">货位箱子调整</string>
    <string name="depotSelectTitle">仓库选择</string>
    <string name="cancelF4">取消(F4)</string>
    <string name="seeF2">查看(F2)</string>
    <string name="pleaseScanningLpn">请扫描lpn</string>
    <string name="manifestName">任务单</string>
    <string name="areYouSubmitBox">确定提交箱子吗？</string>
    <string name="startRefresh">刷新数据中</string>
    <string name="notHaveGoodsInManifest">任务单中已无该数据</string>
    <string name="ManifestIsNull">任务单中已数据</string>
    <string name="ownerUser">货主</string>
    <string name="customerUser">客户</string>
    <string name="InvoiceNoName">发货单号</string>
    <string name="submitF1">提交(F1)</string>
    <string name="depotName">仓库</string>
    <string name="realQtyF4">实际数量(F4):</string>
    <string name="skuName">sku</string>
    <string name="std">规格</string>
    <string name="checkType">盘点类型</string>
    <string name="checkStage">盘点阶段</string>
    <string name="checkRackCode">所要盘点货位编码:</string>
    <string name="checkGoodsCode">所要盘点货品编码:</string>
    <string name="last">上一步</string>
    <string name="qtyName">数量</string>
    <string name="clearF4">清空(F4)</string>
    <string name="nextF1">下一步(F1)</string>
    <string name="packingSuccessF4">包装完成(F4)</string>
    <string name="boxCode">箱子编号</string>
    <string name="addQtyName">添加数量</string>
    <string name="lpnName">lpn</string>
    <string name="statusName">状态</string>
    <string name="rackNoName">货架号</string>
    <string name="deleteF10">删除(F10)</string>
</resources>