<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/padding_left_or_right">

    <TextView
        android:id="@+id/tv_maxValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <LinearLayout
        android:id="@+id/ll_dialog_edit_pro_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.shqtn.base.widget.NameTextView
                android:id="@+id/ntv_dialog_edit_sku"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:name="@string/skuName" />

            <com.shqtn.base.widget.NameTextView
                android:id="@+id/ntv_dialog_edit_batchNo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:name="@string/batchNo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.shqtn.base.widget.NameTextView
                android:id="@+id/ntv_dialog_edit_name"

                style="@style/textStyle" android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:name="@string/name" />

            <com.shqtn.base.widget.NameTextView
                style="@style/textStyle"
                android:id="@+id/ntv_dialog_edit_unit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:name="@string/unit" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_dialog_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qtyName"
            style="@style/textStyle" />

        <EditText
            android:id="@+id/et_dialogQuantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:orientation="horizontal">

        <Button
            android:singleLine="true"
            android:id="@+id/btn_dialog_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:background="@drawable/shape_login_btn_background"
            android:text="确定F3"
            android:textColor="@color/colorWhite" />

        <Button
            android:singleLine="true"
            android:id="@+id/btn_dialog_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape_login_btn_background"
            android:text="@string/deleteF10"
            android:textColor="@color/colorWhite"
            android:visibility="gone" />

        <Button
            android:singleLine="true"
            android:id="@+id/btn_dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_weight="1"
            android:background="@drawable/shape_login_btn_background"
            android:text="取消F4"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
</LinearLayout>